<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".FormActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittext_center_name"
            style="@style/basic"
            android:hint="@string/center_name"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/edittext_serial_number"
            style="@style/basic"
            android:hint="@string/serial_number"
            android:inputType="number"
            android:maxLines="1"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/edittext_date"
            style="@style/basic"
            android:hint="@string/date"
            android:inputType="datetime"
            android:maxLines="1" />

        <LinearLayout
            style="@style/basic"
            android:orientation="horizontal"
            android:weightSum="4">

            <EditText
                android:id="@+id/mail_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mail_number"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/white_yellow"
                android:textColorHint="@color/white_yellow"
                android:textSize="@dimen/size_small" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/mail_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/mail_date"
                android:inputType="datetime"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@color/white_yellow"
                android:textColorHint="@color/white_yellow"
                android:textSize="@dimen/size_normal" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>