<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_normal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_name" />

        <HorizontalScrollView
            style="@style/basic">
            <TextView
                android:id="@+id/info_name_core"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="center name"/>

        </HorizontalScrollView>

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gold_.3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_number" />

        <HorizontalScrollView
            style="@style/basic">

            <TextView
                android:id="@+id/info_serial_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="serial number"/>

        </HorizontalScrollView>

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gold_.3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <HorizontalScrollView
            style="@style/basic">

            <TextView
                android:id="@+id/info_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="date"/>

        </HorizontalScrollView>

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gold_.3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="شماره نامه و تاریخ" />

            <TextView
                android:id="@+id/info_mail_number_date"
                style="@style/basic" />

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/gold_.3" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>